xeph: fix alignment with 5 digit dps
Things look a little squished with 5 digits, so add more room.

--- a/ui/dps/xephero/xephero.css
+++ b/ui/dps/xephero/xephero.css
@@ -90,7 +90,7 @@ li {
 li .dps {
   display: inline-block;
   color: #ded7be;
-  width: 75px;
+  width: 80px;
   text-align: right;
   font-size: 19px;
 }
@@ -106,7 +106,7 @@ li .detail {
   vertical-align: top;
   color: #ded7be;
   font-size: 12px;
-  width: calc(100% - 79px);
+  width: calc(100% - 84px);
 }
 
 li .detail .number {
